Added navbar in events.html

--- a/style/events.css
+++ b/style/events.css
@@ -12,6 +12,7 @@
     color:whitesmoke;
     font-family: 'Josefin Sans', sans-serif; 
     text-shadow: 0px 1px 3px whitesmoke;
+    margin-top: 40px;
     font-size: 3.2em;
     font-weight: 300;
 }
