--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@ body {
   background: #fff;
   font-size: 14px;
   font-weight: 400;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -21,65 +21,70 @@ body {
 }
 
 /* social icons start */
-.socials{
+.socials {
   position: relative;
   margin-top: 2rem;
   margin-left: 22rem;
 }
 .socials .social-icons {
-  padding-left:100;
-  margin-bottom:0;
-  list-style:none
+  padding-left: 100;
+  margin-bottom: 0;
+  list-style: none;
 }
 .socials .social-icons li {
-  display:inline-block;
-  margin-bottom:14px
+  display: inline-block;
+  margin-bottom: 14px;
 }
 .social-icons a {
-  font-size:2rem;
-  display:inline-block;
-  line-height:44px;
+  font-size: 2rem;
+  display: inline-block;
+  line-height: 44px;
   color: #ffe600;
-  background-color:#09011b;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
+  background-color: #09011b;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover {
-  color:#fff;
-  background-color:#0685da
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #0685da;
 }
 .social-icons a.github:hover {
-  background-color:#0e0e0e
+  background-color: #0e0e0e;
 }
 .social-icons a.twitter:hover {
-  background-color:#00aced
+  background-color: #00aced;
 }
 .social-icons a.linkedin:hover {
-  background-color:#007bb6
+  background-color: #007bb6;
 }
 .social-icons a.dev:hover {
-    background-color:#070707
+  background-color: #070707;
 }
 .social-icons a.telegram:hover {
-    background-color:#ee00da
+  background-color: #ee00da;
 }
 /* social icons end */
 
-.navbar-brand{
+.navbar-brand {
   font-size: 7rem;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-size: 38px;
   color: #222222;
   font-weight: 700;
-  font-family: 'Arvo', serif;
+  font-family: "Arvo", serif;
 }
 
 a {
@@ -99,18 +104,20 @@ a a:focus {
 
 p {
   font-weight: 400;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0px;
   font-size: 14px;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: outside none none;
   margin: 0;
   padding: 0;
 }
 
-ul li, ol li {
+ul li,
+ol li {
   list-style: none;
 }
 
@@ -141,7 +148,7 @@ a:not([href]):not([tabindex]) {
   margin: 0 auto 30px;
   position: relative;
   width: 60px;
-  background-color: #F63854;
+  background-color: #f63854;
 }
 
 .padding-none {
@@ -183,40 +190,40 @@ a:not([href]):not([tabindex]) {
 }
 
 .btn-common {
-  background-color: #F63854;
+  background-color: #f63854;
   position: relative;
   z-index: 1;
   text-transform: uppercase;
 }
 
 .btn-common:hover {
-  color: #F63854;
+  color: #f63854;
   background: transparent;
-  border: 1px dotted #F63854;
+  border: 1px dotted #f63854;
   box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
-  transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
 }
 
 .btn-border {
-  color: #F63854;
+  color: #f63854;
   background-color: transparent;
-  border: 1px solid #F63854;
+  border: 1px solid #f63854;
   border-radius: 30px;
   text-transform: uppercase;
 }
 
 .btn-border:hover {
   color: #fff;
-  border-color: #F63854;
-  background-color: #F63854;
+  border-color: #f63854;
+  background-color: #f63854;
 }
 
 .btn-border:focus {
   color: #fff;
-  border-color: #F63854;
-  background-color: #F63854;
+  border-color: #f63854;
+  background-color: #f63854;
 }
 
 .btn-lg {
@@ -227,20 +234,21 @@ a:not([href]):not([tabindex]) {
 
 .btn-rm {
   padding: 7px 0px;
-  color: #F63854;
+  color: #f63854;
   text-transform: capitalize;
 }
 
 .btn-rm:hover {
-  color: #F63854;
+  color: #f63854;
 }
 
 button:focus {
   outline: none !important;
 }
 
-.icon-close, .icon-check {
-  color: #F63854;
+.icon-close,
+.icon-check {
+  color: #f63854;
 }
 
 .social-icon a {
@@ -269,19 +277,19 @@ button:focus {
 }
 
 .social-icon .twitter:hover {
-  background: #4A9CEC;
+  background: #4a9cec;
 }
 
 .social-icon .instagram:hover {
-  background: #D6274D;
+  background: #d6274d;
 }
 
 .social-icon .linkedin:hover {
-  background: #1260A2;
+  background: #1260a2;
 }
 
 .social-icon .google:hover {
-  background: #CE332A;
+  background: #ce332a;
 }
 
 /* ScrollToTop */
@@ -300,7 +308,7 @@ a.back-to-top i {
   height: 40px;
   line-height: 40px;
   color: #fff;
-  background: #F63854;
+  background: #f63854;
   border-radius: 30px;
   text-align: center;
   transition: all 0.2s ease-in-out;
@@ -310,7 +318,8 @@ a.back-to-top i {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 
-a.back-to-top:hover, a.back-to-top:focus {
+a.back-to-top:hover,
+a.back-to-top:focus {
   text-decoration: none;
 }
 
@@ -334,7 +343,8 @@ a.back-to-top:hover, a.back-to-top:focus {
   margin: 0 auto;
 }
 
-#loader-1:before, #loader-1:after {
+#loader-1:before,
+#loader-1:after {
   content: "";
   position: absolute;
   top: -10px;
@@ -343,7 +353,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   height: 100%;
   border-radius: 100%;
   border: 7px solid transparent;
-  border-top-color: #F63854;
+  border-top-color: #f63854;
 }
 
 #loader-1:before {
@@ -384,7 +394,7 @@ hr {
   border-radius: 4px;
   text-align: center;
   margin: 15px 0;
-  box-shadow: 0 0 12px #F4F4F4;
+  box-shadow: 0 0 12px #f4f4f4;
   transition: all 0.3s ease-in-out 0s;
   -moz-transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
@@ -405,7 +415,7 @@ hr {
 
 .services-item .icon i {
   font-size: 30px;
-  color: #F63854;
+  color: #f63854;
   line-height: 70px;
   transition: all 0.3s ease-in-out 0s;
   -moz-transition: all 0.3s ease-in-out 0s;
@@ -426,7 +436,7 @@ hr {
 }
 
 .services-item .services-content h3 a:hover {
-  color: #F63854;
+  color: #f63854;
 }
 
 .services-item:hover {
@@ -434,7 +444,7 @@ hr {
 }
 
 .services-item:hover .icon {
-  background: #F63854;
+  background: #f63854;
 }
 
 .services-item:hover .icon i {
@@ -444,7 +454,6 @@ hr {
 #service {
   position: relative;
 }
-
 
 .about-area .about-wrapper {
   height: 100%;
@@ -505,18 +514,18 @@ hr {
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
   cursor: pointer;
-  color: #F63854 !important;
-  border-color: #F63854 !important;
+  color: #f63854 !important;
+  border-color: #f63854 !important;
 }
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
-  color: #F63854 !important;
+  color: #f63854 !important;
 }
 
 .navbar-expand-md .navbar-toggler {
   background: transparent;
-  border: 1px solid #F63854;
-  color: #F63854;
+  border: 1px solid #f63854;
+  color: #f63854;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -526,8 +535,8 @@ hr {
 }
 
 .top-nav-collapse .navbar-nav li.active a.nav-link {
-  color: #F63854 !important;
-  border-color: #F63854;
+  color: #f63854 !important;
+  border-color: #f63854;
 }
 
 .indigo {
@@ -564,8 +573,8 @@ hr {
 }
 
 .navbar-expand-md .navbar-nav .nav-link:before {
-  background-color: #F63854;
-  content: '';
+  background-color: #f63854;
+  content: "";
   display: block;
   height: 2px;
   position: absolute;
@@ -591,14 +600,14 @@ hr {
 .navbar-expand-md .navbar-nav .nav-link.active,
 .navbar-expand-md .navbar-nav .nav-link.open,
 .navbar-expand-md .navbar-nav .open > .nav-link {
-  color: #F63854 !important;
+  color: #f63854 !important;
   width: 100%;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover::before,
 .navbar-expand-md .navbar-nav .nav-link:focus {
-  color: #F63854;
+  color: #f63854;
   width: 100%;
   transition: width 1s;
   -webkit-transition: width 1s;
@@ -694,11 +703,12 @@ hr {
 .dropdown .dropdown-item:focus,
 .dropdown .dropdown-item:hover,
 .dropdown .dropdown-item.active {
-  color: #F63854;
+  color: #f63854;
   background: #f7f7f7;
 }
 
-.dropdown-item.active, .dropdown-item:active {
+.dropdown-item.active,
+.dropdown-item:active {
   background: transparent;
 }
 
@@ -744,8 +754,7 @@ hr {
 
 .testimonial {
   position: relative;
-  background-color: #F63854;
- 
+  background-color: #f63854;
 }
 
 .testimonial-item {
@@ -796,7 +805,7 @@ hr {
   color: #6306af;
 }
 
-.media-icons{
+.media-icons {
   margin-top: 10px;
   display: flex;
   justify-content: center;
@@ -808,7 +817,7 @@ hr {
   width: 35px;
   margin: 0 4px;
   font-size: 16px;
-  color: #FFF;
+  color: #fff;
   border-radius: 50%;
   border: 2px solid transparent;
   background: #8a15e9;
@@ -856,8 +865,10 @@ hr {
   -o-transition: all 0.4s ease-in-out;
 }
 
-.owl-carousel button.owl-dot.active span, .owl-carousel button.owl-dot.clickable, .owl-carousel button.owl-dot:hover span {
-  background: #F63854;
+.owl-carousel button.owl-dot.active span,
+.owl-carousel button.owl-dot.clickable,
+.owl-carousel button.owl-dot:hover span {
+  background: #f63854;
 }
 
 .slick-slider {
@@ -884,26 +895,21 @@ hr {
   transform: scale(1.9);
 }
 
-
 /*----------Event Section Starts here--------------------->*/
-.events .heading{
+.events .heading {
   text-align: center;
   margin-top: 3%;
   margin-bottom: 2%;
- }
+}
 
- .events .box-container{
-   display: flex;
-   flex-wrap:nowrap;
-   gap:10.5rem;
-   overflow-x: auto;
-   overflow-y: hidden;
-
-
-
- }
+.events .box-container {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 1.5rem;
+  overflow: scroll;
+}
 /*--------Scroll-Bar Designing---------------------------->*/
- ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
 }
 
@@ -914,7 +920,7 @@ hr {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background:#F63854 ;
+  background: #f63854;
 }
 
 /* Handle on hover */
@@ -923,107 +929,95 @@ hr {
 }
 /*Scoll bar designing ends here-------------------------------->*/
 
- .events .box-container .box{
-   height:auto;
+.events .box-container .box {
+  height: auto;
 
-   flex:1 1 30rem;
+  flex: 1 1 30rem;
 
-   border:1rem solid #fff;
-   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-   border-radius: .5rem;
-   position: relative;
+  border: 1rem solid #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  position: relative;
 
-   min-width:25%;
+  min-width: 25%;
+}
 
- }
+.events .box-container .box img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
 
- .events .box-container .box img{
-   height: 100%;
-   width:100%;
-   object-fit:contain;
+.events .box-container .box .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  background: whitesmoke;
+  padding: 2rem;
+  padding-top: 5rem;
+  text-align: center;
+  overflow: auto;
+  visibility: hidden;
+}
 
- }
+.events .box-container .box .content h4 {
+  font-size: 3rem;
+  color: #f63854;
+}
 
- .events .box-container .box .content{
-   position: absolute;
-   top:0; left:0;
-   height: 0;
-   width: 0;
-   background:whitesmoke;
-   padding:2rem;
-   padding-top: 5rem;
-   text-align: center;
-   overflow:auto;
-   visibility: hidden;
+.events .box-container .box .content p {
+  font-size: 1.5rem;
+  color: #f63854;
+  padding: 1rem 0;
+  font-stretch: normal;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 
- }
-
- .events .box-container .box .content h4{
-   font-size: 3rem;
-   color:#F63854;
-
-
-
-
- }
-
- .events .box-container .box .content p{
-   font-size: 1.5rem;
-   color:#F63854;
-   padding:1rem 0;
-   font-stretch: normal;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
- }
-
- .events .box-container .box:hover .content{
-   top:0;
-   height: 100%;
-   width: 100%;
-   visibility: visible;
- }
+.events .box-container .box:hover .content {
+  top: 0;
+  height: 100%;
+  width: 100%;
+  visibility: visible;
+}
 
 /*--------------Event-Buttons starts here--------------->*/
- .btn{
+.btn {
   display: inline-block;
-  padding: .5rem 3rem;
-  border: .2rem solid #F63854;
-  color:black;
+  padding: 0.5rem 3rem;
+  border: 0.2rem solid #f63854;
+  color: black;
   cursor: pointer;
   font-size: 1.5rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   position: relative;
   overflow: hidden;
   z-index: 0;
   margin-top: 1rem;
-
 }
 
-.btn::before{
-  content: '';
+.btn::before {
+  content: "";
   position: absolute;
-  top: 0; right: 0;
+  top: 0;
+  right: 0;
   width: 0%;
   height: 100%;
-  background:#F63854;
-  transition: .3s linear;
+  background: #f63854;
+  transition: 0.3s linear;
   z-index: -1;
-
 }
-.btn:hover::before{
+.btn:hover::before {
   width: 100%;
   left: 0;
 }
 
-.btn:hover{
+.btn:hover {
   color: #fff;
 }
 
-
-
 /*-------------------Event Section ends here---------------------------->*/
-
-
 
 .form-control {
   width: 100%;
@@ -1038,7 +1032,7 @@ hr {
 }
 
 .form-control:focus {
-  border-color: #F63854;
+  border-color: #f63854;
   box-shadow: none;
   outline: none;
 }
@@ -1052,7 +1046,8 @@ textarea {
   outline: none;
 }
 
-.btn.disabled, .btn:disabled {
+.btn.disabled,
+.btn:disabled {
   opacity: 1;
 }
 
@@ -1093,7 +1088,7 @@ textarea {
 }
 
 .contact-right .contact-icon {
-  background: #F63854;
+  background: #f63854;
   color: #fff;
   border-radius: 4px;
   font-size: 20px;
@@ -1115,7 +1110,9 @@ textarea {
 
 /*cta
 */
-#cta{background: ;}
+#cta {
+  background: ;
+}
 
 /* Footer Area Start */
 .footer-area {
@@ -1153,7 +1150,7 @@ textarea {
 }
 
 .footer-area .footer-link li a:hover {
-  color: #F63854;
+  color: #f63854;
 }
 
 .footer-area .address li {
@@ -1195,7 +1192,7 @@ textarea {
   height: 52px;
   border-radius: 0;
   background: transparent;
-  color: #F63854;
+  color: #f63854;
 }
 
 #copyright .copyright-content {
@@ -1212,10 +1209,8 @@ textarea {
 }
 
 #copyright p a {
-  color: #F63854;
+  color: #f63854;
 }
-
-
 
 /* CUSTOM CSS */
 
@@ -1224,16 +1219,14 @@ textarea {
   /* width: 800px; */
   object-fit: cover;
 }
-.opportunity_btn{
+.opportunity_btn {
   position: relative;
   top: 10px;
   left: 550px;
 }
-.navbar-brand img{
+.navbar-brand img {
   width: 50px;
-  
-  
 }
-.top-nav-collapse .navbar-brand img{
+.top-nav-collapse .navbar-brand img {
   width: 50px;
 }
