--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -258,3 +258,12 @@
       max-width: 100%;
     }
 }
+
+@media (max-width:500px) {
+  .socials ul{
+    text-align: center;
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  }
