--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,7 +178,7 @@ a:not([href]):not([tabindex]) {
   padding: 10px 30px;
   cursor: pointer;
   font-weight: 400;
-  color: red;
+  color: #fff;
   border-radius: 30px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
