--- a/enhance.css
+++ b/enhance.css
@@ -21,7 +21,7 @@
     
     p.slide-left {
         animation: slideleft 1s linear forwards;
-        transition: 2s;
+        animation-delay: 2s;
     }
     
     .header-button:hover {
@@ -33,10 +33,10 @@
         padding: 15px;
         z-index: 2;
         animation: slideleft 1s linear forwards;
-        transition: 3s;
+        animation-delay: 3s;
     }
     
-    @keyframes {
+    @keyframes slide-left{
         0% {
             transform: translate(100px);
             opacity=0;
@@ -59,5 +59,7 @@
     }
     
     h2 {
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
+        font-family: san serif;
+.btn btn-common mt-3{
+    padding-top: 20px;
+}
