--- a/enhance.css
+++ b/enhance.css
@@ -4,8 +4,13 @@
     
     .nav-item {
         font-size: large;
-        margin: 10px;
-        padding : 10px;
+        margin: 6px;
+        padding : 6px;
+    }
+    .box{
+        border: 2px solid rgb(43, 41, 41);
+        border-radius: 0.5px;
+        padding : 7px;
     }
     
     .head-title {
