--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,36 +1,35 @@
-.icon{      
-    float: right;  
-}  
+.icon {
+  float: right;
+}
 
-.heading{
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
-    font-family: 'Oswald', sans-serif;    
+.heading {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
 }
 
 h2 {
-    border-bottom: 3px solid black;
-    display: inline-block;
-    margin-left: 150px;   
+  border-bottom: 3px solid black;
+  display: inline-block;
+  margin-left: 150px;
 }
 
 .page-header {
-    margin-top: 20px;
-    margin-left: -55px;
+  margin-top: 20px;
+  margin-left: -55px;
 }
-
 .guide {
-    padding-top: 50px;
+  padding-top: 50px;
 }
-    
-@media  (min-width: 412px) and (max-width: 915px) {
-    .icon img {
-        min-width: 100%;
-        max-width: 100%;
-    }
 
-    .page-header h2{
-        font-size: 1.5rem;
-    }
+@media (min-width: 412px) and (max-width: 915px) {
+  .icon img {
+    min-width: 100%;
+    max-width: 100%;
+  }
+
+  .page-header h2 {
+    font-size: 1.5rem;
+  }
 }
