--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: subpixel-antialiased;
-  color: #abacae;
+  color: #495057;
   line-height: 25px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -137,7 +137,7 @@ a:not([href]):not([tabindex]) {
 }
 
 .section-title {
-  font-size: 30px;
+  font-size: 45px;
   color: #222222;
   display: inline-block;
   font-weight: 700;
@@ -563,13 +563,14 @@ hr {
 }
 
 .navbar-expand-md .navbar-nav .nav-item {
-  padding-left: 25px;
+  padding-left: 32px;
 }
 
 .navbar-expand-md .navbar-nav .nav-link {
   color: #333;
   font-weight: 400;
   padding: 7px 0;
+  font-size: 16px;
   cursor: pointer;
   position: relative;
   background: transparent;
@@ -1135,6 +1136,17 @@ textarea {
 #cta {
   background: ;
 }
+/*  benefits section starts*/
+.section-feature {
+  padding: 0 4px;
+  font-size: 15px;
+  padding-bottom: 20px;
+  line-height: 50px;
+}
+.com {
+  font-size: 30px;
+}
+/* benefits section ends */
 
 /* Footer Area Start */
 .footer-area {
@@ -1241,47 +1253,45 @@ textarea {
   background-color: #09011b;
 }
 
-
 .socials a i {
   font-size: 15px;
   width: 20px;
   transition: color 0.4s ease;
-
 }
 
 .socials a.linkedin:hover {
   background-color: #0077b5;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .socials a.discord:hover {
-  background-color:  #5865F2;
-  color: #FFFFFF;
+  background-color: #5865f2;
+  color: #ffffff;
 }
 
 .socials a.telegram:hover {
-  background-color: #229ED9;
-  color: #FFFFFF;
+  background-color: #229ed9;
+  color: #ffffff;
 }
 
 .socials a.github:hover {
   background-color: #124165;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .socials a.youtube:hover {
-  background-color: #FF0000;
-  color: #FFFFFF;
+  background-color: #ff0000;
+  color: #ffffff;
 }
 
 .socials a.facebook:hover {
   background-color: #3b5998;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .socials a.twitter:hover {
-  background-color: #1DA1F2;
-  color: #FFFFFF;
+  background-color: #1da1f2;
+  color: #ffffff;
 }
 
 #copyright .copyright-content {
