--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,6 +1,140 @@
 
+.container_blog{
+   display: flex;
+  justify-content:center;
+  align-items: center;
+  flex-wrap: wrap;
+  
+}
+
+/* 
+.image{
+    width: 350px;
+  height: 300px;
+} */
+
+.blog {
+  /* width: 350px; */
+  height: 460px;
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+
+  margin:50px;
+  position: relative;
+  border-radius: 52px;
+  filter: drop-shadow(23px 24px 36px rgba(254, 42, 80, 0.25));
+ 
+
+}
 
 
+
+.blog:hover{
+
+ transform: scale(1.1);
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+
+   }
+
+
+.read_btn{
+
+  background-color:#f63854;
+ 
+ padding: 7px 10px;
+ border: 1px solid #f63854;
+  border-radius: 30px;
+  border: 1px dotted white;
+  color: white;
+
+
+
+}
+
+.read_btn:hover{
+  color:#f63854 ;
+    border: 1px dotted #f63854;
+  background: white;
+   box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+}
+
+
+.image img{
+ 
+  object-fit: cover;
+  width: 350px;
+  border-radius: 52px 52px 0px 0px;
+   
+  height: 349px;
+}
+
+
+.content{
+
+  top: 214px;
+  left: 0;
+  position: absolute;
+  z-index: 1;
+  width: 350px;
+  height: 260px;
+ display: flex;
+ justify-content: space-around;
+ align-items: center;
+ flex-direction: column;
+ 
+padding: 20px;
+/* background: linear-gradient(320.32deg, #f63854 28.82%, #FFFFFF 142.78%); */
+border-radius: 52px 52px 52px 52px;
+background-color: white;
+color: #f63854;
+
+
+}
+
+.content:hover
+{
+  
+  background-color: white;
+}
+
+.head{
+  color: black;
+  font-size: 16px;
+  font-weight: 600;
+  font-family:"Arvo", serif;
+  
+
+}
+
+
+.description{
+  margin-top: 5px;
+  color: gray;
+  
+  font-size: 12px;
+      font-family: "Open Sans", sans-serif;
+}
+/* 
+/* @keyframes animate {
+
+  0% {
+
+    bottom: 120px;
+  } 
+
+  100%{
+    bottom: 400px;
+
+  }
+   */
+
+/* 
 .blog_container {
     display: grid;
     height: max-content;
@@ -8,20 +142,24 @@
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 100px;
     grid-row-gap: 70px;
+
     margin: 0 auto;
 }
 .blog_item_container {
   height: 550px;
   width: 320px;
-  /* box-shadow: 5px 5px 5px gray; */
+   box-shadow: 5px 5px 5px gray; 
   background-color:none;
   border-radius: 5px;
   padding: 10px;
-  border:0.4px solid gray;
-  /* border-radius: 7px; */
-/* background: #efefef; */
-box-shadow:  5px 5px 19px #a4a4a4,
-             -5px -5px 19px #ffffff;
+  border:0.4px solid #f63854;
+   border-radius: 7px; 
+ background: #efefef; 
+ box-shadow:  5px 5px 19px #a4a4a4,
+             -5px -5px 19px #ffffff; 
+             -webkit-border-radius: 40px 40px 0px 40px;
+-moz-border-radius: 40px 40px 0px 40px;
+border-radius: 40px 40px 0px 40px;
 }
 .blog_item_head {
  font-size: 20px;
@@ -37,8 +175,11 @@ box-shadow:  5px 5px 19px #a4a4a4,
   background-repeat: no-repeat;
   height: 200px;
   width: 250px;
-  /* border-radius: 15px; */
-  box-shadow: 8px 8px 8px rgb(158, 158, 158);
+  -webkit-border-radius: 40px 40px 0px 40px;
+-moz-border-radius: 40px 40px 0px 40px;
+border-radius: 40px 40px 0px 40px;
+   border-radius: 15px; 
+  box-shadow: 8px 8px 8px rgb(158, 158, 158); 
   margin: 15px;
   overflow: hidden;
   
@@ -55,12 +196,12 @@ box-shadow:  5px 5px 19px #a4a4a4,
     transition: 0.5s all ease-in-out;
 }
 .blog_item_head:hover {
-    /* color: orange; */
+     color: orange; 
     color: #f63854;
 }
 .blog_item_image:hover img{
-   transform: scale(1.3);
-}
+    transform: scale(1.3);
+} 
 
 .title {
     font-size: 40px;
@@ -70,10 +211,12 @@ box-shadow:  5px 5px 19px #a4a4a4,
     text-shadow: 7px 7px 7px rgb(172, 172, 172);
 }
 
-@media(max-width:1024px){
+/* @media(max-width:1024px){
   .blog_container{
   grid-template-columns: repeat(2, 1fr);
   }
+
+
 }
 
 @media (max-width: 767px){
@@ -81,7 +224,8 @@ box-shadow:  5px 5px 19px #a4a4a4,
     grid-template-columns: none;
   }
 
+
   .blog_item_container{
     height: auto;
   }
-}
+}  */
