--- a/assets/css/oppurtunity.css
+++ b/assets/css/oppurtunity.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 5px 10px rgb(133 69 69) !important;
     margin: 3%;
     min-height: max-content;
-    border-radius: 3rem;
+    border-radius: 30px;
     flex: 1;
 }
 
