--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Arvo:700|Open+Sans");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
 html {
   overflow-x: hidden;
@@ -16,7 +17,8 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: subpixel-antialiased;
-  color: #abacae;
+  /* color: #abacae; */
+  color:#6c6c6c;
   line-height: 25px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -285,6 +287,21 @@ button:focus {
   -moz-transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
   -o-transition: all 0.3s ease-in-out 0s;
+}
+.mentor-info{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.mentor-profile{
+  display: flex;
+  align-items: center;
+}
+.mentor-profile i{
+  color: #f63854;
+  font-size: 20px;
+  margin-right: 0.7rem;
 }
 
 .social-icon a:hover {
@@ -711,7 +728,6 @@ hr {
   border-bottom: 1px solid #f1f1f1;
   text-decoration: none;
   display: inline-block;
-  float: left;
   clear: both;
   position: relative;
   outline: 0;
@@ -1218,6 +1234,7 @@ textarea {
   font-size: 14px;
   font-weight: 400;
   position: relative;
+  text-decoration: none;
 }
 
 .footer-area .footer-link li a:hover {
@@ -1233,6 +1250,7 @@ textarea {
   font-size: 14px;
   line-height: 30px;
   font-weight: 400;
+  text-decoration: none;
 }
 
 .footer-area .address li a i {
@@ -1242,7 +1260,6 @@ textarea {
   height: 36px;
   text-align: center;
   display: inline-block;
-  float: left;
   margin-right: 5px;
   line-height: 32px;
 }
@@ -1364,6 +1381,7 @@ textarea {
 
 #copyright p a {
   color: #f63854;
+    text-decoration: none;
 }
 
 /* CUSTOM CSS */
